@@ -1,3 +1,10 @@
+2008-04-28  Evan Monroig  <evan.monroig@gmail.com>
+
+	* foreign-numeric-vector.lisp (defctype): changed to use
+	DEFINE-FOREIGN-TYPE so that the types are automatically converted
+	with recent CFFI
+	(translate-to-foreign): update lambda list
+
 2008-04-24  Evan Monroig  <evan.monroig@gmail.com>
 
 	* foreign-numeric-vector.lisp (:compile-toplevel): use
